# tracing-tg-bot-subscriber

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: bot_writer.rs  config.rs  lib.rs
